--- a/src/css1.css
+++ b/src/css1.css
@@ -6,13 +6,13 @@
   }
   
   input[type="text"] {
-    width: 100%;
+    width: 70%;
     padding: 10px;
     margin-bottom: 10px;
   }
   
   .filters {
-    display: flex;
+    display: column;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
@@ -79,7 +79,10 @@
 
   }
 
-
+#createTeamBtn{
+  background-color: none;
+  font-size: 20px;
+}
   
   
   
